--- a/index.html
+++ b/index.html
@@ -70,20 +70,21 @@
   <!-- ===== 评论区 + 点赞（Giscus） ===== -->
   <div id="giscus" style="margin: 3rem auto; max-width: 900px;"></div>
 
-  <script
-    src="https://giscus.app/client.js"
-    data-repo="Linh061/Sidereus-s-Notes"
-    data-repo-id="Sidereus's Notes"
-    data-category="Comments"
-    data-category-id="Sidereus-s-Notes"
-    data-mapping="pathname"
-    data-reactions-enabled="1"
-    data-emit-metadata="0"
-    data-theme="light"
-    data-lang="en"
-    crossorigin="anonymous"
-    async>
-  </script>
+<script src="https://giscus.app/client.js"
+        data-repo="Linh061/Sidereus-s-Notes"
+        data-repo-id="R_kgDOQo2YYw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOQo2YY84CzzgT"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-TW"
+        crossorigin="anonymous"
+        async>
+</script>
 
 </body>
 </html>
