--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Docsify 主题（干净、学术感） -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"
-  >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
 
   <!-- KaTeX 数学公式样式 -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"
-  >
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
 </head>
 
 <body>
+  <!-- Docsify 根容器 -->
   <div id="app">Loading…</div>
 
+  <!-- Docsify 配置 -->
   <script>
     window.$docsify = {
       /* ===== 基本信息 ===== */
-      name: 'Sidereus's Notes',
+      name: "Sidereus's Notes",
       repo: 'Linh061/Sidereus-s-Notes',
 
       /* ===== 文档结构 ===== */
@@ -64,27 +59,27 @@
 
   <!-- 插件 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify-latex/dist/docsify-latex.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-pagination@1.0.1/dist/docsify-pagination.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-latex@0.1.1/dist/docsify-latex.min.js"></script>
 
-  <!-- ===== 评论区 + 点赞（Giscus） ===== -->
+  <!-- 评论区（Giscus） -->
   <div id="giscus" style="margin: 3rem auto; max-width: 900px;"></div>
-
-<script src="https://giscus.app/client.js"
-        data-repo="Linh061/Sidereus-s-Notes"
-        data-repo-id="R_kgDOQo2YYw"
-        data-category="Announcements"
-        data-category-id="DIC_kwDOQo2YY84CzzgT"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="top"
-        data-theme="preferred_color_scheme"
-        data-lang="zh-TW"
-        crossorigin="anonymous"
-        async>
-</script>
-
+  <script src="https://giscus.app/client.js"
+          data-repo="Linh061/Sidereus-s-Notes"
+          data-repo-id="R_kgDOQo2YYw"
+          data-category="Announcements"
+          data-category-id="DIC_kwDOQo2YY84CzzgT"
+          data-mapping="pathname"
+          data-strict="0"
+          data-reactions-enabled="1"
+          data-emit-metadata="0"
+          data-input-position="top"
+          data-theme="preferred_color_scheme"
+          data-lang="zh-TW"
+          crossorigin="anonymous"
+          async>
+  </script>
+</body>
+</html>
 </body>
 </html>
