--- a/index.html
+++ b/index.html
@@ -46,23 +46,40 @@
         crossChapter: true
       },
 
-      /* ===== LaTeX 支持（希腊字母 OK） ===== */
-      latex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']],
-        displayMath: [['$$', '$$'], ['\\[', '\\]']]
-      }
+      /* ===== LaTeX 支持 ===== */
+      plugins: [
+        function(hook, vm) {
+          hook.doneEach(function() {
+            if (window.renderMathInElement) {
+              renderMathInElement(document.getElementById('app'), {
+                delimiters: [
+                  {left: "$$", right: "$$", display: true},
+                  {left: "$", right: "$", display: false},
+                  {left: "\\(", right: "\\)", display: false},
+                  {left: "\\[", right: "\\]", display: true}
+                ]
+              });
+            }
+          });
+        }
+      ]
     }
   </script>
 
   <!-- Docsify 核心 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify@4"></script>
 
-  <!-- 插件 -->
+  <!-- 搜索插件 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+
+  <!-- 分页插件 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-pagination@1.0.1/dist/docsify-pagination.min.js"></script>
+
+  <!-- KaTeX 渲染插件 -->
+  <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/docsify-latex@0.1.1/dist/docsify-latex.min.js"></script>
 
-  <!-- 评论区（Giscus） -->
+  <!-- Giscus 评论区 -->
   <div id="giscus" style="margin: 3rem auto; max-width: 900px;"></div>
   <script src="https://giscus.app/client.js"
           data-repo="Linh061/Sidereus-s-Notes"
@@ -79,7 +96,5 @@
           crossorigin="anonymous"
           async>
   </script>
-</body>
-</html>
 </body>
 </html>
