--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
       /* ===== 文档结构 ===== */
       loadSidebar: true,
+      loadSidebar: '_sidebar.md',
       loadNavbar: true,
       subMaxLevel: 3,
 
