--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 
   <!-- 标题 -->
-  <title>Open Scientific Notes</title>
+  <title>Sidereus's Notes</title>
 
   <!-- 移动端适配 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
