--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     repo: 'Linh061/Sidereus-s-Notes',
 
     /* ===== 文档结构 ===== */
+    loadSidebar: true,
     loadSidebar: '_sidebar.md',  // 指向根目录下的 _sidebar.md
-    loadNavbar: true,            // 如果有 navbar 文件，可以开启
+    loadNavbar: false,            // 如果有 navbar 文件，可以开启
     subMaxLevel: 3,              // 显示目录子级别
 
     /* ===== Markdown & 搜索 ===== */
