--- a/index.html
+++ b/index.html
@@ -63,20 +63,21 @@
             script.async = true;
             script.crossOrigin = 'anonymous';
             // 替换为你在 Giscus 官网生成的参数！！！
-            script.setAttribute('data-repo', 'Linh061/Sidereus-s-Notes');
-            script.setAttribute('data-repo-id', '你的 repo-id'); // 替换为实际值
-            script.setAttribute('data-category', 'General'); // 替换为实际分类
-            script.setAttribute('data-category-id', '你的 category-id'); // 替换为实际值
-            script.setAttribute('data-mapping', 'pathname'); // 按页面路径关联评论
-            script.setAttribute('data-strict', '0');
-            script.setAttribute('data-reactions-enabled', '1');
-            script.setAttribute('data-emit-metadata', '0');
-            script.setAttribute('data-input-position', 'bottom');
-            script.setAttribute('data-theme', 'light');
-            script.setAttribute('data-lang', 'en');
-            script.setAttribute('data-loading', 'lazy');
-            script.setAttribute('data-crossorigin', 'anonymous');
-            document.getElementById('giscus-container').appendChild(script);
+<script src="https://giscus.app/client.js"
+        data-repo="Linh061/Sidereus-s-Notes"
+        data-repo-id="R_kgDOQo2YYw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOQo2YY84CzzgT"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
           });
         }
       ]
