--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       basePath: '/Sidereus-s-Notes/', // 关键：匹配 GitHub Pages 路径
 
       /* ===== 文档结构（侧边栏核心配置） ===== */
+      loadNavbar: true,
       loadSidebar: true, // 简化写法，优先读取根目录 _sidebar.md
       sidebarDepth: 3,   // 替代 subMaxLevel，统一目录层级
 
